--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@ function shake() {
       "Trickle down",
       "Donald Dewsnup",
       "Developer shills",
-      "View corridors"
+      "View corridors",
+      "Bird deaths",
+      "The city is full"
     ];
     var reason = reasons[Math.floor(Math.random() * reasons.length)];
     $("#ball h2").fadeOut(200, function() {
