--- a/index.html
+++ b/index.html
@@ -19,7 +19,20 @@ function shake() {
       "Developer shills",
       "View corridors",
       "Bird deaths",
-      "The city is full"
+      "The city is full",
+      "There is no place to park",
+      "Fire truck ladders arent tall enough",
+      "Palo Alto should be doing this instead",
+      "Paid activists",
+      "CEQA lawsuit",
+      "second CEQA lawsuit",
+      "Yes, another fucking CEQA lawsuit",
+      "An appeal was filed on the last day",
+      "Humans arent meant to be packed in so densely"
+      "You're from Philly. You have no say in this.",
+      "Too much parking",
+      "Food desert",
+      "Crime rates will rise"
     ];
     var reason = reasons[Math.floor(Math.random() * reasons.length)];
     $("#ball h2").fadeOut(200, function() {
