--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ function shake() {
       "second CEQA lawsuit",
       "Yes, another fucking CEQA lawsuit",
       "An appeal was filed on the last day",
-      "Humans arent meant to be packed in so densely"
+      "Humans arent meant to be packed in so densely",
       "You're from Philly. You have no say in this.",
       "Too much parking",
       "Food desert",
